--- a/app/src/main/res/layout/events.xml
+++ b/app/src/main/res/layout/events.xml
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="@+id/datentime"
                 android:paddingStart="30dp"
-                app:layout_constraintTop_toBottomOf="@+id/datentime"
+                app:layout_constraintTop_toBottomOf="@+id/datentime"></ImageView>
 
 
 
