changed UI of create_new.xml

--- a/app/src/main/res/layout/create_new.xml
+++ b/app/src/main/res/layout/create_new.xml
@@ -16,53 +16,49 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:selectAllOnFocus="true"
         android:text="Create Account"
         android:textSize="30dp"
+        android:textColor="#967ADC"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:inputType="textEmailAddress"
-        android:padding="10dp"
-        android:selectAllOnFocus="true"
-        android:text="Create Account"
-        android:textColor="#6339CD"
-        android:textSize="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:entries="@array/choices"
+        app:layout_constraintBottom_toTopOf="@+id/textView1"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:layout_editor_absoluteX="-2dp" />
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:selectAllOnFocus="true"
         android:text="Username"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/username"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="204dp"
         android:background="@drawable/box_outline"
-        android:inputType="textEmailAddress"
+        android:inputType="textNoSuggestions"
+        android:hint="Username"
         android:padding="8dp"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,11 +70,10 @@
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:selectAllOnFocus="true"
         android:text="Email"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -89,10 +84,11 @@
     <EditText
         android:id="@+id/email"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="308dp"
         android:background="@drawable/box_outline"
         android:inputType="textEmailAddress"
+        android:hint="Must include @XXXX.sg"
         android:padding="8dp"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,25 +100,26 @@
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:selectAllOnFocus="true"
-        android:text="Confirm email"
-        android:textSize="10dp"
+        android:text="Confirm password"
+        android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/confirm_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enter_password"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/enter_password"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="412dp"
         android:background="@drawable/box_outline"
-        android:inputType="textEmailAddress"
+        android:inputType="textPassword"
+        android:hint="At least one number and one symbol"
         android:padding="8dp"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -131,27 +128,29 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:selectAllOnFocus="true"
         android:text="Password"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/enter_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/confirm_password"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="520dp"
         android:background="@drawable/box_outline"
-        android:inputType="textEmailAddress"
+        android:inputType="textPassword"
+        android:hint="Enter same password"
         android:padding="8dp"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
