--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,7 +78,7 @@
         android:layout_gravity="start"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="64dp"
-        android:background="@drawable/grey_rectangle"
+        android:background="@android:color/transparent"
         android:enabled="false"
         android:gravity="center_horizontal"
         android:text="Create new account"
