linked create new account to mainactivity page and added functionalities

--- a/app/src/main/res/layout/create_new.xml
+++ b/app/src/main/res/layout/create_new.xml
@@ -164,7 +164,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:background="@drawable/purple_rectangle"
-        android:enabled="false"
+        android:enabled="true"
         android:text="Sign In"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
