--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,6 +28,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:background="@drawable/grey_rectangle"
+        android:gravity="center_horizontal"
         android:hint="@string/prompt_password"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
@@ -37,14 +39,15 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username"
-        android:background="@drawable/grey_rectangle"
-        android:gravity="center_horizontal"/>
+        tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="160dp"
+        android:background="@drawable/grey_rectangle"
+        android:gravity="center_horizontal"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
@@ -52,8 +55,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/grey_rectangle"
-        android:gravity="center_horizontal"/>
+        tools:ignore="TouchTargetSizeCheck" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login"
@@ -61,12 +63,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:background="@drawable/purple_rectangle"
-        android:enabled="false"
+        android:enabled="true"
         android:text="Sign In"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/new_account"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
         app:layout_constraintVertical_bias="1.0" />
@@ -79,14 +81,16 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="64dp"
         android:background="@android:color/transparent"
-        android:enabled="false"
+        android:enabled="true"
         android:gravity="center_horizontal"
-        android:text="Create new account"
+        android:text="No account? Sign up now!"
+        android:textColor="#967ADC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.165" />
+        app:layout_constraintVertical_bias="0.185" />
 
     <ProgressBar
         android:id="@+id/loading"
