--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -95,6 +95,203 @@
         android:inputType="numberDecimal"
         app:layout_constraintStart_toStartOf="@+id/purple_line"
         app:layout_constraintTop_toBottomOf="@+id/Event_Name" />
+    <TextView
+        android:id="@+id/tags"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tags"
+        android:textColor="#6338CD"
+        android:textSize="10sp"
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/editTextValue" />
+    <TextView
+        android:id="@+id/tag_choose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose upto 3 tags."
+        android:textSize = "8sp"
+        android:textColor="#434A54"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/tags"
+        />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/chipGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/tag_choose"
+        android:hint="Select tags"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="none"
+            android:hint="Select"/>
+<!--        <com.google.android.material.chip.ChipGroup-->
+
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            app:singleLine="false" />-->
+
+    </com.google.android.material.textfield.TextInputLayout>
+    <TextView
+        android:id="@+id/date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date"
+        android:textColor="#6338CD"
+        android:textSize="10sp"
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp"
+        android:textStyle="bold"
+        android:layout_marginTop="60dp"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/tag_choose" />
+
+    <EditText
+        android:id="@+id/editTextDate"
+        android:layout_width="130dp"
+        android:layout_height="30dp"
+        android:background="@drawable/text_box"
+        android:focusable="false"
+        android:hint="Select Date"
+        android:paddingStart="10dp"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/date" /> <!-- Disable direct editing -->
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Time"
+        android:textColor="#6338CD"
+        android:textSize="10sp"
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp"
+        android:textStyle="bold"
+        android:layout_marginTop="60dp"
+        android:layout_marginStart="130dp"
+        app:layout_constraintStart_toEndOf="@+id/date"
+        app:layout_constraintTop_toBottomOf="@+id/tag_choose" />
+    <EditText
+        android:id="@+id/editTextTime"
+        android:layout_width="130dp"
+        android:layout_height="30dp"
+        android:background="@drawable/text_box"
+        android:focusable="false"
+        android:hint="Select Time"
+        android:paddingStart="10dp"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="@+id/editTextValue"
+        app:layout_constraintStart_toEndOf="@+id/editTextDate"
+        app:layout_constraintTop_toBottomOf="@+id/time" />
+    <TextView
+        android:id="@+id/location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Location"
+        android:textColor="#6338CD"
+        android:textSize="10sp"
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
+
+    <EditText
+        android:id="@+id/location_text"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:background="@drawable/text_box"
+        android:paddingStart="10dp"
+        android:textSize="15sp"
+        android:hint="Enter the name of event"
+        android:inputType="numberDecimal"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/location" />
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Description"
+        android:textColor="#6338CD"
+        android:textSize="10sp"
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/location_text" />
+    <TextView
+        android:id="@+id/description_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="You can include links to Sign-up forms or event websites etc."
+        android:textSize = "8sp"
+        android:textColor="#434A54"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/description"
+        />
+
+    <EditText
+        android:id="@+id/description_text"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:background="@drawable/text_box"
+        android:paddingStart="10dp"
+        android:textSize="15sp"
+        android:hint=""
+        android:inputType="numberDecimal"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/description_info" />
+    <TextView
+        android:id="@+id/contact"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Contact"
+        android:textColor="#6338CD"
+        android:textSize="10sp"
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/description_text" />
+
+    <EditText
+        android:id="@+id/contact_text"
+        android:layout_width="300dp"
+        android:layout_height="30dp"
+        android:background="@drawable/text_box"
+        android:paddingStart="10dp"
+        android:textSize="15sp"
+        android:hint=""
+        android:inputType="numberDecimal"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/contact" />
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="Post"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:background="@drawable/purple_button_rect"
+        android:padding="8dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintStart_toStartOf="@+id/purple_line"
+        app:layout_constraintTop_toBottomOf="@+id/contact_text"
+        app:layout_constraintEnd_toEndOf="@+id/purple_line"
+        />
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
