--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -16,7 +16,8 @@
         android:paddingTop="30dp"
         android:textSize="17sp"
         android:textStyle="bold"
-        android:textColor="#6339CD"/>
+        android:textColor="#6339CD"
+        />
 
     <ImageView
         android:id="@+id/purple_line"
@@ -92,7 +93,8 @@
         android:paddingStart="10dp"
         android:textSize="15sp"
         android:hint="Enter the name of event"
-        android:inputType="numberDecimal"
+        android:inputType="text"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@+id/purple_line"
         app:layout_constraintTop_toBottomOf="@+id/Event_Name" />
     <TextView
@@ -163,6 +165,7 @@
         android:hint="Select Date"
         android:paddingStart="10dp"
         android:textSize="15sp"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@+id/purple_line"
         app:layout_constraintTop_toBottomOf="@+id/date" /> <!-- Disable direct editing -->
 
@@ -189,6 +192,7 @@
         android:hint="Select Time"
         android:paddingStart="10dp"
         android:textSize="15sp"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="@+id/editTextValue"
         app:layout_constraintStart_toEndOf="@+id/editTextDate"
         app:layout_constraintTop_toBottomOf="@+id/time" />
@@ -213,7 +217,8 @@
         android:paddingStart="10dp"
         android:textSize="15sp"
         android:hint="Enter the name of event"
-        android:inputType="numberDecimal"
+        android:inputType="text"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@+id/purple_line"
         app:layout_constraintTop_toBottomOf="@+id/location" />
     <TextView
@@ -221,6 +226,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Description"
+        android:inputType="text"
         android:textColor="#6338CD"
         android:textSize="10sp"
         android:paddingTop="10dp"
@@ -234,7 +240,8 @@
         android:layout_height="wrap_content"
         android:text="You can include links to Sign-up forms or event websites etc."
         android:textSize = "8sp"
-        android:textColor="#434A54"
+        android:inputType="text"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@+id/purple_line"
         app:layout_constraintTop_toBottomOf="@+id/description"
         />
@@ -247,9 +254,10 @@
         android:paddingStart="10dp"
         android:textSize="15sp"
         android:hint=""
-        android:inputType="numberDecimal"
         app:layout_constraintStart_toStartOf="@+id/purple_line"
-        app:layout_constraintTop_toBottomOf="@+id/description_info" />
+        app:layout_constraintTop_toBottomOf="@+id/description_info"
+        android:inputType="textMultiLine"
+        android:textColor="#000000"/>
     <TextView
         android:id="@+id/contact"
         android:layout_width="wrap_content"
@@ -271,7 +279,8 @@
         android:paddingStart="10dp"
         android:textSize="15sp"
         android:hint=""
-        android:inputType="numberDecimal"
+        android:inputType="number"
+        android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@+id/purple_line"
         app:layout_constraintTop_toBottomOf="@+id/contact" />
     <TextView
@@ -288,6 +297,7 @@
         app:layout_constraintStart_toStartOf="@+id/purple_line"
         app:layout_constraintTop_toBottomOf="@+id/contact_text"
         app:layout_constraintEnd_toEndOf="@+id/purple_line"
+
         />
 
 
