--- a/app/src/main/res/layout/alert_box.xml
+++ b/app/src/main/res/layout/alert_box.xml
@@ -9,7 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/purple_tint">
 
         <ImageView
             android:id="@+id/imageView"
@@ -38,7 +39,8 @@
 
         <TextView
             android:id="@+id/action_description"
-            android:layout_width="220dp"
+            android:textColor="@color/grey"
+            android:layout_width="215dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="description of action"
@@ -59,30 +61,33 @@
             app:layout_constraintTop_toBottomOf="@+id/action_description">
 
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/buttonCancelAction"
-                android:layout_width="130dp"
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonCancel"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/purple"
-                android:text="@string/oops"
                 android:textColor="@color/white"
-                android:textSize="11sp"
-                app:cornerRadius="0dp" />
+                android:text="Cancel"
+                android:background="@color/purple"/>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/buttonResetCalendar"
-                android:layout_width="130dp"
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@drawable/blank_rectangle" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonConfirm"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:backgroundTint="@color/white"
-                android:text="Reset Calendar"
-                android:textColor="#FF9292"
-                android:textSize="11sp"
-                app:cornerRadius="0dp"/>
+                android:textColor="@color/white"
+                android:text="Confirm"
+                android:background="@color/purple"
+                />
+
 
         </LinearLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
