--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -51,11 +51,11 @@
             android:contentDescription="Profile photo" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
-            android:text="Beepobb"
+            android:text="username"
             android:textColor="@color/white"
             android:textSize="8pt"
             android:textStyle="bold"
@@ -67,6 +67,7 @@
             app:layout_constraintVertical_bias="1.0" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            style="@style/RoundFAB"
             android:id="@+id/editFAB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -87,6 +88,21 @@
             tools:layout_editor_absoluteX="1dp">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonChangePassword"
+                style="@style/ProfileButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginBottom="18dp"
+                android:background="@drawable/button_style"
+                android:paddingVertical="16dp"
+                android:paddingStart="28dp"
+                android:text="Change Password"
+                android:textAlignment="textStart"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
+
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buttonResetCalendar"
                 style="@style/ProfileButton"
                 android:layout_width="match_parent"
@@ -102,7 +118,7 @@
                 android:textSize="16sp" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/buttonDeleteAccount"
+                android:id="@+id/buttonDeactivateAccount"
                 style="@style/ProfileButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -111,13 +127,13 @@
                 android:background="@drawable/button_style"
                 android:paddingVertical="16dp"
                 android:paddingStart="28dp"
-                android:text="Delete Account"
+                android:text="Deactivate Account"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
                 android:textSize="16sp" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/buttonAbout"
+                android:id="@+id/buttonLogOut"
                 style="@style/ProfileButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -126,7 +142,7 @@
                 android:background="@drawable/button_style"
                 android:paddingVertical="16dp"
                 android:paddingStart="28dp"
-                android:text="About"
+                android:text="Log out"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
                 android:textSize="16sp" />
