--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,6 +13,15 @@
         <item name="profile_container">@color/bg_dark</item>
     </style>
 
+    <style name="Theme.Clarity" parent="Base.Theme.Clarity" />
+
+    <style name="RoundFAB" parent="Widget.MaterialComponents.FloatingActionButton">
+        <item name="cornerFamily">rounded</item>
+        <item name="android:radius">40dp</item>
+        <item name="backgroundTint">#2B2254</item>
+        <item name="tint">@color/white</item>
+    </style>
+
     <style name="ScreenBackground"><item name="android:background">@color/dark_grey</item></style>
     <style name="Container"><item name="android:background">@color/dark_grey</item></style>
     <style name="Accent1"><item name="android:textColor">@color/purple</item></style>
@@ -35,6 +44,6 @@
     <style name="ProfileBanner"><item name="android:background">@color/dark_purple</item></style>
     <style name="ProfileButton">
         <item name="backgroundTint">@color/wolf_grey</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/light_grey</item>
     </style>
 </resources>
