--- a/app/src/main/res/drawable/like_button.xml
+++ b/app/src/main/res/drawable/like_button.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:state_pressed="false"
-        android:drawable="@drawable/heart_notpressed" />
-    <item
-        android:state_pressed="true"
-        android:drawable="@drawable/heart_pressed" />
+<item android:state_checked="true"
+    android:drawable="@drawable/baseline_favorite_24" />
+<item android:state_checked="false"
+    android:drawable="@drawable/baseline_favorite_border_24" />
 </selector>
