--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NavBarFragments.Discover">
+    tools:context=".NavBarFragments.Discover.Discover">
 
 
     <androidx.recyclerview.widget.RecyclerView
