--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,9 +8,9 @@
     <style name="Base.Theme.Clarity" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
-        <item name="background">@color/bg_dark</item>
         <item name="profile_circle">@color/purple</item>
         <item name="profile_container">@color/bg_dark</item>
+        <item name="android:statusBarColor">#2B2254</item>
     </style>
 
     <style name="Theme.Clarity" parent="Base.Theme.Clarity" />
@@ -29,9 +29,9 @@
     <style name="Typography"><item name="android:textColor">@color/light_grey</item></style>
 
     <!-- Styles for Event Fragment -->
-    <style name="EventTitle"><item name="android:textColor">@color/dark_purple</item></style>
+    <style name="EventTitle"><item name="android:textColor">@color/purple</item></style>
     <style name="EventDetails"><item name="android:textColor">@color/light_grey</item></style>
-    <style name="EventCard"><item name="cardBackgroundColor">@color/purplish_grey</item></style>
+    <style name="EventCard"><item name="android:background">@color/purplish_grey</item></style>
 
     <!-- Styles for Calendar Fragment -->
     <style name="CalendarEventCard"><item name="cardBackgroundColor">@color/purplish_grey</item></style>
