--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -121,8 +121,8 @@
         />
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/chipGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         app:layout_constraintStart_toStartOf="@+id/purple_line"
         app:layout_constraintTop_toBottomOf="@+id/tag_choose"
         android:hint="Select Tags"
@@ -131,8 +131,8 @@
 
         <MultiAutoCompleteTextView
             android:id="@+id/multiAutoCompleteTextView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
             android:hint="Select Tags"
             android:inputType="textMultiLine" />
 <!--        <com.google.android.material.chip.ChipGroup-->
@@ -280,7 +280,7 @@
         android:paddingStart="10dp"
         android:textSize="15sp"
         android:hint=""
-        android:inputType="number"
+        android:inputType="text"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@+id/purple_line"
         app:layout_constraintTop_toBottomOf="@+id/contact" />
