used methods from database

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,8 +48,8 @@
         android:layout_marginTop="160dp"
         android:background="@drawable/grey_rectangle"
         android:gravity="center_horizontal"
-        android:hint="@string/prompt_email"
-        android:inputType="textEmailAddress"
+        android:hint="Username"
+        android:inputType="text"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
