--- a/app/src/main/res/layout/tag_button_model.xml
+++ b/app/src/main/res/layout/tag_button_model.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="26dp"
     android:layout_marginEnd="10dp"
-    android:textColor="#967ADC"
+    android:textColor="@color/accent_2"
     android:background="@drawable/tag_unselect_rectangle"
     android:paddingStart="5dp"
     android:paddingEnd="5dp"
