--- a/app/src/main/res/layout/events_page.xml
+++ b/app/src/main/res/layout/events_page.xml
@@ -15,7 +15,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:contentDescription="night_fiesta_description"
+                android:contentDescription="event description"
                 android:src="@drawable/night_fiesta"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/nightfiesta"
+            android:id="@+id/eventNameView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingStart="30dp"
@@ -63,8 +63,8 @@
             android:paddingStart="30dp"
             android:text="@string/event_date_time"
             android:textSize="10sp"
-            app:layout_constraintStart_toStartOf="@+id/nightfiesta"
-            app:layout_constraintTop_toBottomOf="@+id/nightfiesta" />
+            app:layout_constraintStart_toStartOf="@+id/eventNameView"
+            app:layout_constraintTop_toBottomOf="@+id/eventNameView" />
 
         <ImageView
             android:id="@+id/pin"
