feat: UI for log in page

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -28,6 +28,10 @@
     <style name="Subtitle"><item name="android:textColor">@color/grey</item></style>
     <style name="Typography"><item name="android:textColor">@color/light_grey</item></style>
 
+    <!-- Styles for Log In Fragment -->
+    <style name="LogInFields"><item name="android:background">@drawable/grey_rectangle_night</item> </style>
+    <style name="LogInSubmit"><item name="android:background">@drawable/purple_rectangle_night</item></style>
+
     <!-- Styles for Event Fragment -->
     <style name="EventTitle"><item name="android:textColor">@color/purple</item></style>
     <style name="EventDetails"><item name="android:textColor">@color/light_grey</item></style>
