--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/ProfileBanner"
-    tools:context=".NavBarFragments.Profile.Profile">
+    tools:context=".NavBarFragments.Profile">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -79,18 +79,6 @@
             app:layout_constraintTop_toTopOf="@+id/circleBg"
             app:layout_constraintVertical_bias="0.4" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            style="@style/RoundFAB"
-            android:id="@+id/editFAB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
-            android:clickable="true"
-            android:src="@drawable/baseline_create_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
@@ -99,21 +87,6 @@
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/placeholderProfilePic"
             tools:layout_editor_absoluteX="1dp">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/buttonChangePassword"
-                style="@style/ProfileButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginBottom="18dp"
-                android:background="@drawable/button_style"
-                android:paddingVertical="16dp"
-                android:paddingStart="28dp"
-                android:text="Change Password"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textSize="16sp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buttonResetCalendar"
@@ -126,21 +99,6 @@
                 android:paddingVertical="16dp"
                 android:paddingStart="28dp"
                 android:text="Reset Calendar"
-                android:textAlignment="textStart"
-                android:textAllCaps="false"
-                android:textSize="16sp" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/buttonDeactivateAccount"
-                style="@style/ProfileButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginBottom="18dp"
-                android:background="@drawable/button_style"
-                android:paddingVertical="16dp"
-                android:paddingStart="28dp"
-                android:text="Deactivate Account"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
                 android:textSize="16sp" />
